kubernetes/apps/kube-system/node-feature-discovery/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: node-feature-discovery
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: node-feature-discovery
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
